// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`md parser > frontmatter.md > config 1`] = `
{
  "drawings": {
    "enabled": true,
    "persist": false,
    "presenterOnly": false,
    "syncAll": true,
  },
  "fonts": {
    "italic": false,
    "local": [],
    "mono": [
      ""Fira Code"",
      "ui-monospace",
      "SFMono-Regular",
      "Menlo",
      "Monaco",
      "Consolas",
      ""Liberation Mono"",
      ""Courier New"",
      "monospace",
    ],
    "provider": "google",
    "sans": [
      ""Roboto"",
      ""Lato"",
      "ui-sans-serif",
      "system-ui",
      "-apple-system",
      "BlinkMacSystemFont",
      ""Segoe UI"",
      "Roboto",
      ""Helvetica Neue"",
      "Arial",
      ""Noto Sans"",
      "sans-serif",
      ""Apple Color Emoji"",
      ""Segoe UI Emoji"",
      ""Segoe UI Symbol"",
      ""Noto Color Emoji"",
    ],
    "serif": [
      ""Mate SC"",
      "ui-serif",
      "Georgia",
      "Cambria",
      ""Times New Roman"",
      "Times",
      "serif",
    ],
    "webfonts": [
      "Roboto",
      "Lato",
      "Mate SC",
      "Fira Code",
    ],
    "weights": [
      "200",
      "400",
      "600",
    ],
  },
  "layout": "cover",
  "title": "Hi",
}
`;

exports[`md parser > frontmatter.md > features 1`] = `
{
  "katex": false,
  "mermaid": false,
  "monaco": false,
  "tweet": false,
}
`;

exports[`md parser > frontmatter.md > slides 1`] = `
[
  {
    "content": "# Hi",
    "frontmatter": {
      "fonts": {
        "mono": "Fira Code",
        "sans": "Roboto, Lato",
        "serif": "Mate SC",
      },
      "layout": "cover",
    },
    "importChain": undefined,
    "index": 0,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "
# Hi
",
      "end": 10,
      "filepath": "frontmatter.md",
      "frontmatter": {
        "fonts": {
          "mono": "Fira Code",
          "sans": "Roboto, Lato",
          "serif": "Mate SC",
        },
        "layout": "cover",
      },
      "frontmatterDoc": {
        "fonts": {
          "mono": "Fira Code",
          "sans": "Roboto, Lato",
          "serif": "Mate SC",
        },
        "layout": "cover",
      },
      "frontmatterRaw": "layout: cover
fonts:
  sans: Roboto, Lato
  serif: Mate SC
  mono: Fira Code
",
      "frontmatterStyle": "frontmatter",
      "index": 0,
      "level": 1,
      "note": undefined,
      "raw": "---
layout: cover
fonts:
  sans: Roboto, Lato
  serif: Mate SC
  mono: Fira Code
---

# Hi
",
      "start": 0,
      "title": "Hi",
    },
    "title": "Hi",
  },
  {
    "content": "# Hello",
    "frontmatter": {
      "layout": "center",
      "meta": {
        "duration": 12,
        "title": "FooBar",
      },
    },
    "importChain": undefined,
    "index": 1,
    "level": 1,
    "note": "This is note",
    "source": {
      "content": "
# Hello
",
      "end": 23,
      "filepath": "frontmatter.md",
      "frontmatter": {
        "layout": "center",
        "meta": {
          "duration": 12,
          "title": "FooBar",
        },
      },
      "frontmatterDoc": {
        "layout": "center",
        "meta": {
          "duration": 12,
          "title": "FooBar",
        },
      },
      "frontmatterRaw": "meta:
  title: FooBar
  duration: 12
layout: center
",
      "frontmatterStyle": "frontmatter",
      "index": 1,
      "level": 1,
      "note": "This is note",
      "raw": "---
meta:
  title: FooBar
  duration: 12
layout: center
---

# Hello

<!--
This is note
-->
",
      "start": 10,
      "title": "Hello",
    },
    "title": "Hello",
  },
  {
    "content": "# Morning",
    "frontmatter": {},
    "importChain": undefined,
    "index": 2,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "
# Morning
",
      "end": 27,
      "filepath": "frontmatter.md",
      "frontmatter": {},
      "frontmatterDoc": null,
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 2,
      "level": 1,
      "note": undefined,
      "raw": "
# Morning
",
      "start": 24,
      "title": "Morning",
    },
    "title": "Morning",
  },
  {
    "content": "<!-- This is not note -->
Hey",
    "frontmatter": {
      "layout": "text",
    },
    "importChain": undefined,
    "index": 3,
    "level": undefined,
    "note": "This is note",
    "source": {
      "content": "
<!-- This is not note -->
Hey
",
      "end": 38,
      "filepath": "frontmatter.md",
      "frontmatter": {
        "layout": "text",
      },
      "frontmatterDoc": {
        "layout": "text",
      },
      "frontmatterRaw": "layout: text
",
      "frontmatterStyle": "frontmatter",
      "index": 3,
      "level": undefined,
      "note": "This is note",
      "raw": "---
layout: text
---

<!-- This is not note -->
Hey

<!--
This is note
-->
",
      "start": 27,
      "title": undefined,
    },
    "title": undefined,
  },
  {
    "content": "\`\`\`md
---
this should be treated as code block
---

---

Also part of the code block
\`\`\`",
    "frontmatter": {},
    "importChain": undefined,
    "index": 4,
    "level": undefined,
    "note": undefined,
    "source": {
      "content": "
\`\`\`md
---
this should be treated as code block
---

---

Also part of the code block
\`\`\`
",
      "end": 50,
      "filepath": "frontmatter.md",
      "frontmatter": {},
      "frontmatterDoc": null,
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 4,
      "level": undefined,
      "note": undefined,
      "raw": "
\`\`\`md
---
this should be treated as code block
---

---

Also part of the code block
\`\`\`
",
      "start": 39,
      "title": undefined,
    },
    "title": undefined,
  },
  {
    "content": "Content 1",
    "frontmatter": {
      "layout": "from yaml",
    },
    "importChain": undefined,
    "index": 5,
    "level": undefined,
    "note": undefined,
    "source": {
      "content": "
Content 1
",
      "end": 59,
      "filepath": "frontmatter.md",
      "frontmatter": {
        "layout": "from yaml",
      },
      "frontmatterDoc": {
        "layout": "from yaml",
      },
      "frontmatterRaw": "
# The first yaml block should be treated as frontmatter
layout: from yaml
",
      "frontmatterStyle": "yaml",
      "index": 5,
      "level": undefined,
      "note": undefined,
      "raw": "\`\`\`yaml
# The first yaml block should be treated as frontmatter
layout: from yaml
\`\`\`

Content 1
",
      "start": 51,
      "title": undefined,
    },
    "title": undefined,
  },
  {
    "content": "\`\`\`yaml
# When there is already a frontmatter, the first yaml block should be treated as content
layout: should not from yaml 1
\`\`\`

Content 2",
    "frontmatter": {
      "layout": "cover",
    },
    "importChain": undefined,
    "index": 6,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "
\`\`\`yaml
# When there is already a frontmatter, the first yaml block should be treated as content
layout: should not from yaml 1
\`\`\`

Content 2
",
      "end": 70,
      "filepath": "frontmatter.md",
      "frontmatter": {
        "layout": "cover",
      },
      "frontmatterDoc": {
        "layout": "cover",
      },
      "frontmatterRaw": "layout: cover
",
      "frontmatterStyle": "frontmatter",
      "index": 6,
      "level": 1,
      "note": undefined,
      "raw": "---
layout: cover
---

\`\`\`yaml
# When there is already a frontmatter, the first yaml block should be treated as content
layout: should not from yaml 1
\`\`\`

Content 2
",
      "start": 59,
      "title": "When there is already a frontmatter, the first yaml block should be treated as content",
    },
    "title": "When there is already a frontmatter, the first yaml block should be treated as content",
  },
  {
    "content": "# Title

\`\`\`yaml
# When there is already a frontmatter, the first yaml block should be treated as content
layout: should not from yaml 2
\`\`\`

Content 3",
    "frontmatter": {},
    "importChain": undefined,
    "index": 7,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "
# Title

\`\`\`yaml
# When there is already a frontmatter, the first yaml block should be treated as content
layout: should not from yaml 2
\`\`\`

Content 3
",
      "end": 81,
      "filepath": "frontmatter.md",
      "frontmatter": {},
      "frontmatterDoc": null,
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 7,
      "level": 1,
      "note": undefined,
      "raw": "
# Title

\`\`\`yaml
# When there is already a frontmatter, the first yaml block should be treated as content
layout: should not from yaml 2
\`\`\`

Content 3
",
      "start": 71,
      "title": "Title",
    },
    "title": "Title",
  },
]
`;

exports[`md parser > mdc.md > config 1`] = `
{
  "drawings": {
    "enabled": true,
    "persist": false,
    "presenterOnly": false,
    "syncAll": true,
  },
  "fonts": {
    "italic": false,
    "local": [],
    "mono": [
      "ui-monospace",
      "SFMono-Regular",
      "Menlo",
      "Monaco",
      "Consolas",
      ""Liberation Mono"",
      ""Courier New"",
      "monospace",
    ],
    "provider": "google",
    "sans": [
      "ui-sans-serif",
      "system-ui",
      "-apple-system",
      "BlinkMacSystemFont",
      ""Segoe UI"",
      "Roboto",
      ""Helvetica Neue"",
      "Arial",
      ""Noto Sans"",
      "sans-serif",
      ""Apple Color Emoji"",
      ""Segoe UI Emoji"",
      ""Segoe UI Symbol"",
      ""Noto Color Emoji"",
    ],
    "serif": [
      "ui-serif",
      "Georgia",
      "Cambria",
      ""Times New Roman"",
      "Times",
      "serif",
    ],
    "webfonts": [],
    "weights": [
      "200",
      "400",
      "600",
    ],
  },
  "mdc": true,
  "title": "MDC{style="color:red"}",
}
`;

exports[`md parser > mdc.md > features 1`] = `
{
  "katex": false,
  "mermaid": false,
  "monaco": false,
  "tweet": false,
}
`;

exports[`md parser > mdc.md > slides 1`] = `
[
  {
    "content": "# MDC{style="color:red"}

:arrow{x1=1 y1=1 x2=2 y2=2}",
    "frontmatter": {
      "mdc": true,
    },
    "importChain": undefined,
    "index": 0,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "
# MDC{style="color:red"}

:arrow{x1=1 y1=1 x2=2 y2=2}
",
      "end": 8,
      "filepath": "mdc.md",
      "frontmatter": {
        "mdc": true,
      },
      "frontmatterDoc": {
        "mdc": true,
      },
      "frontmatterRaw": "mdc: true
",
      "frontmatterStyle": "frontmatter",
      "index": 0,
      "level": 1,
      "note": undefined,
      "raw": "---
mdc: true
---

# MDC{style="color:red"}

:arrow{x1=1 y1=1 x2=2 y2=2}
",
      "start": 0,
      "title": "MDC{style="color:red"}",
    },
    "title": "MDC{style="color:red"}",
  },
]
`;

exports[`md parser > minimal.md > config 1`] = `
{
  "drawings": {
    "enabled": true,
    "persist": false,
    "presenterOnly": false,
    "syncAll": true,
  },
  "fonts": {
    "italic": false,
    "local": [],
    "mono": [
      "ui-monospace",
      "SFMono-Regular",
      "Menlo",
      "Monaco",
      "Consolas",
      ""Liberation Mono"",
      ""Courier New"",
      "monospace",
    ],
    "provider": "google",
    "sans": [
      "ui-sans-serif",
      "system-ui",
      "-apple-system",
      "BlinkMacSystemFont",
      ""Segoe UI"",
      "Roboto",
      ""Helvetica Neue"",
      "Arial",
      ""Noto Sans"",
      "sans-serif",
      ""Apple Color Emoji"",
      ""Segoe UI Emoji"",
      ""Segoe UI Symbol"",
      ""Noto Color Emoji"",
    ],
    "serif": [
      "ui-serif",
      "Georgia",
      "Cambria",
      ""Times New Roman"",
      "Times",
      "serif",
    ],
    "webfonts": [],
    "weights": [
      "200",
      "400",
      "600",
    ],
  },
  "title": "H1",
}
`;

exports[`md parser > minimal.md > features 1`] = `
{
  "katex": false,
  "mermaid": false,
  "monaco": false,
  "tweet": false,
}
`;

exports[`md parser > minimal.md > slides 1`] = `
[
  {
    "content": "# H1
## H2
### H3

Sample Text

\`\`\`ts
console.log('Hello World')
\`\`\`",
    "frontmatter": {},
    "importChain": undefined,
    "index": 0,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "
# H1
## H2
### H3

Sample Text

\`\`\`ts
console.log('Hello World')
\`\`\`
",
      "end": 10,
      "filepath": "minimal.md",
      "frontmatter": {},
      "frontmatterDoc": null,
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 0,
      "level": 1,
      "note": undefined,
      "raw": "
# H1
## H2
### H3

Sample Text

\`\`\`ts
console.log('Hello World')
\`\`\`
",
      "start": 0,
      "title": "H1",
    },
    "title": "H1",
  },
  {
    "content": "# Hello

- Hello
- Hi
- Hey
- Yo",
    "frontmatter": {},
    "importChain": undefined,
    "index": 1,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "
# Hello

- Hello
- Hi
- Hey
- Yo
",
      "end": 19,
      "filepath": "minimal.md",
      "frontmatter": {},
      "frontmatterDoc": null,
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 1,
      "level": 1,
      "note": undefined,
      "raw": "
# Hello

- Hello
- Hi
- Hey
- Yo
",
      "start": 11,
      "title": "Hello",
    },
    "title": "Hello",
  },
  {
    "content": "Nice to meet you",
    "frontmatter": {},
    "importChain": undefined,
    "index": 2,
    "level": undefined,
    "note": undefined,
    "source": {
      "content": "
Nice to meet you
",
      "end": 23,
      "filepath": "minimal.md",
      "frontmatter": {},
      "frontmatterDoc": null,
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 2,
      "level": undefined,
      "note": undefined,
      "raw": "
Nice to meet you
",
      "start": 20,
      "title": undefined,
    },
    "title": undefined,
  },
]
`;

exports[`md parser > multi-entries.md > config 1`] = `
{
  "drawings": {
    "enabled": true,
    "persist": false,
    "presenterOnly": false,
    "syncAll": true,
  },
  "fonts": {
    "italic": false,
    "local": [],
    "mono": [
      "ui-monospace",
      "SFMono-Regular",
      "Menlo",
      "Monaco",
      "Consolas",
      ""Liberation Mono"",
      ""Courier New"",
      "monospace",
    ],
    "provider": "google",
    "sans": [
      "ui-sans-serif",
      "system-ui",
      "-apple-system",
      "BlinkMacSystemFont",
      ""Segoe UI"",
      "Roboto",
      ""Helvetica Neue"",
      "Arial",
      ""Noto Sans"",
      "sans-serif",
      ""Apple Color Emoji"",
      ""Segoe UI Emoji"",
      ""Segoe UI Symbol"",
      ""Noto Color Emoji"",
    ],
    "serif": [
      "ui-serif",
      "Georgia",
      "Cambria",
      ""Times New Roman"",
      "Times",
      "serif",
    ],
    "webfonts": [],
    "weights": [
      "200",
      "400",
      "600",
    ],
  },
  "src": "sub/page1.md",
  "title": "Page 1",
}
`;

exports[`md parser > multi-entries.md > features 1`] = `
{
  "katex": true,
  "mermaid": false,
  "monaco": false,
  "tweet": true,
}
`;

exports[`md parser > multi-entries.md > slides 1`] = `
[
  {
    "content": "# Page 1",
    "frontmatter": {},
    "importChain": [
      {
        "content": "",
        "end": 4,
        "filepath": "multi-entries.md",
        "frontmatter": {
          "src": "sub/page1.md",
        },
        "frontmatterDoc": {
          "src": "sub/page1.md",
        },
        "frontmatterRaw": "src: sub/page1.md
",
        "frontmatterStyle": "frontmatter",
        "index": 0,
        "level": undefined,
        "note": undefined,
        "raw": "---
src: sub/page1.md
---
",
        "start": 0,
        "title": undefined,
      },
    ],
    "index": 0,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "# Page 1",
      "end": 2,
      "filepath": "sub/page1.md",
      "frontmatter": {},
      "frontmatterDoc": null,
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 0,
      "level": 1,
      "note": undefined,
      "raw": "# Page 1
",
      "start": 0,
      "title": "Page 1",
    },
    "title": "Page 1",
  },
  {
    "content": "# Page 2

<Tweet />",
    "frontmatter": {
      "background": "https://sli.dev/demo-cover.png#2",
      "layout": "cover",
    },
    "importChain": [
      {
        "content": "",
        "end": 9,
        "filepath": "multi-entries.md",
        "frontmatter": {
          "background": "https://sli.dev/demo-cover.png#2",
          "src": "/sub/page2.md",
        },
        "frontmatterDoc": {
          "background": "https://sli.dev/demo-cover.png#2",
          "src": "/sub/page2.md",
        },
        "frontmatterRaw": "src: /sub/page2.md
background: https://sli.dev/demo-cover.png#2
",
        "frontmatterStyle": "frontmatter",
        "index": 1,
        "level": undefined,
        "note": undefined,
        "raw": "---
src: /sub/page2.md
background: https://sli.dev/demo-cover.png#2
---
",
        "start": 4,
        "title": undefined,
      },
    ],
    "index": 1,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "# Page 2

<Tweet />",
      "end": 8,
      "filepath": "sub/page2.md",
      "frontmatter": {
        "layout": "cover",
      },
      "frontmatterDoc": {
        "layout": "cover",
      },
      "frontmatterRaw": "layout: cover
",
      "frontmatterStyle": "frontmatter",
      "index": 0,
      "level": 1,
      "note": undefined,
      "raw": "---
layout: cover
---

# Page 2

<Tweet />
",
      "start": 0,
      "title": "Page 2",
    },
    "title": "Page 2",
  },
  {
    "content": "# Page 3",
    "frontmatter": {
      "background": "https://sli.dev/demo-cover.png#34",
    },
    "importChain": [
      {
        "content": "",
        "end": 14,
        "filepath": "multi-entries.md",
        "frontmatter": {
          "background": "https://sli.dev/demo-cover.png#34",
          "src": "./sub/pages3-4.md",
        },
        "frontmatterDoc": {
          "background": "https://sli.dev/demo-cover.png#34",
          "src": "./sub/pages3-4.md",
        },
        "frontmatterRaw": "src: ./sub/pages3-4.md
background: https://sli.dev/demo-cover.png#34
",
        "frontmatterStyle": "frontmatter",
        "index": 2,
        "level": undefined,
        "note": undefined,
        "raw": "---
src: ./sub/pages3-4.md
background: https://sli.dev/demo-cover.png#34
---
",
        "start": 9,
        "title": undefined,
      },
    ],
    "index": 2,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "# Page 3",
      "end": 2,
      "filepath": "sub/pages3-4.md",
      "frontmatter": {},
      "frontmatterDoc": null,
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 0,
      "level": 1,
      "note": undefined,
      "raw": "# Page 3
",
      "start": 0,
      "title": "Page 3",
    },
    "title": "Page 3",
  },
  {
    "content": "# Page 4

<Tweet />",
    "frontmatter": {
      "background": "https://sli.dev/demo-cover.png#34",
      "layout": "cover",
    },
    "importChain": [
      {
        "content": "",
        "end": 14,
        "filepath": "multi-entries.md",
        "frontmatter": {
          "background": "https://sli.dev/demo-cover.png#34",
          "src": "./sub/pages3-4.md",
        },
        "frontmatterDoc": {
          "background": "https://sli.dev/demo-cover.png#34",
          "src": "./sub/pages3-4.md",
        },
        "frontmatterRaw": "src: ./sub/pages3-4.md
background: https://sli.dev/demo-cover.png#34
",
        "frontmatterStyle": "frontmatter",
        "index": 2,
        "level": undefined,
        "note": undefined,
        "raw": "---
src: ./sub/pages3-4.md
background: https://sli.dev/demo-cover.png#34
---
",
        "start": 9,
        "title": undefined,
      },
    ],
    "index": 3,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "# Page 4

<Tweet />",
      "end": 10,
      "filepath": "sub/pages3-4.md",
      "frontmatter": {
        "layout": "cover",
      },
      "frontmatterDoc": {
        "layout": "cover",
      },
      "frontmatterRaw": "layout: cover
",
      "frontmatterStyle": "frontmatter",
      "index": 1,
      "level": 1,
      "note": undefined,
      "raw": "---
layout: cover
---

# Page 4

<Tweet />
",
      "start": 2,
      "title": "Page 4",
    },
    "title": "Page 4",
  },
  {
    "content": "# Page 1",
    "frontmatter": {
      "background": "https://sli.dev/demo-cover.png#14",
    },
    "importChain": [
      {
        "content": "",
        "end": 19,
        "filepath": "multi-entries.md",
        "frontmatter": {
          "background": "https://sli.dev/demo-cover.png#14",
          "src": "sub/nested1-4.md",
        },
        "frontmatterDoc": {
          "background": "https://sli.dev/demo-cover.png#14",
          "src": "sub/nested1-4.md",
        },
        "frontmatterRaw": "src: sub/nested1-4.md
background: https://sli.dev/demo-cover.png#14
",
        "frontmatterStyle": "frontmatter",
        "index": 3,
        "level": undefined,
        "note": undefined,
        "raw": "---
src: sub/nested1-4.md
background: https://sli.dev/demo-cover.png#14
---
",
        "start": 14,
        "title": undefined,
      },
      {
        "content": "",
        "end": 4,
        "filepath": "sub/nested1-4.md",
        "frontmatter": {
          "src": "/sub/page1.md",
        },
        "frontmatterDoc": {
          "src": "/sub/page1.md",
        },
        "frontmatterRaw": "src: /sub/page1.md
",
        "frontmatterStyle": "frontmatter",
        "index": 0,
        "level": undefined,
        "note": undefined,
        "raw": "---
src: /sub/page1.md
---
",
        "start": 0,
        "title": undefined,
      },
    ],
    "index": 4,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "# Page 1",
      "end": 2,
      "filepath": "sub/page1.md",
      "frontmatter": {},
      "frontmatterDoc": null,
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 0,
      "level": 1,
      "note": undefined,
      "raw": "# Page 1
",
      "start": 0,
      "title": "Page 1",
    },
    "title": "Page 1",
  },
  {
    "content": "# Page 2

<Tweet />",
    "frontmatter": {
      "background": "https://sli.dev/demo-cover.png#14",
      "layout": "cover",
    },
    "importChain": [
      {
        "content": "",
        "end": 19,
        "filepath": "multi-entries.md",
        "frontmatter": {
          "background": "https://sli.dev/demo-cover.png#14",
          "src": "sub/nested1-4.md",
        },
        "frontmatterDoc": {
          "background": "https://sli.dev/demo-cover.png#14",
          "src": "sub/nested1-4.md",
        },
        "frontmatterRaw": "src: sub/nested1-4.md
background: https://sli.dev/demo-cover.png#14
",
        "frontmatterStyle": "frontmatter",
        "index": 3,
        "level": undefined,
        "note": undefined,
        "raw": "---
src: sub/nested1-4.md
background: https://sli.dev/demo-cover.png#14
---
",
        "start": 14,
        "title": undefined,
      },
      {
        "content": "",
        "end": 8,
        "filepath": "sub/nested1-4.md",
        "frontmatter": {
          "src": "page2.md",
        },
        "frontmatterDoc": {
          "src": "page2.md",
        },
        "frontmatterRaw": "src: page2.md
",
        "frontmatterStyle": "frontmatter",
        "index": 1,
        "level": undefined,
        "note": undefined,
        "raw": "---
src: page2.md
---
",
        "start": 4,
        "title": undefined,
      },
    ],
    "index": 5,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "# Page 2

<Tweet />",
      "end": 8,
      "filepath": "sub/page2.md",
      "frontmatter": {
        "layout": "cover",
      },
      "frontmatterDoc": {
        "layout": "cover",
      },
      "frontmatterRaw": "layout: cover
",
      "frontmatterStyle": "frontmatter",
      "index": 0,
      "level": 1,
      "note": undefined,
      "raw": "---
layout: cover
---

# Page 2

<Tweet />
",
      "start": 0,
      "title": "Page 2",
    },
    "title": "Page 2",
  },
  {
    "content": "# Page 3",
    "frontmatter": {
      "background": "https://sli.dev/demo-cover.png#14",
    },
    "importChain": [
      {
        "content": "",
        "end": 19,
        "filepath": "multi-entries.md",
        "frontmatter": {
          "background": "https://sli.dev/demo-cover.png#14",
          "src": "sub/nested1-4.md",
        },
        "frontmatterDoc": {
          "background": "https://sli.dev/demo-cover.png#14",
          "src": "sub/nested1-4.md",
        },
        "frontmatterRaw": "src: sub/nested1-4.md
background: https://sli.dev/demo-cover.png#14
",
        "frontmatterStyle": "frontmatter",
        "index": 3,
        "level": undefined,
        "note": undefined,
        "raw": "---
src: sub/nested1-4.md
background: https://sli.dev/demo-cover.png#14
---
",
        "start": 14,
        "title": undefined,
      },
      {
        "content": "",
        "end": 12,
        "filepath": "sub/nested1-4.md",
        "frontmatter": {
          "src": "../sub/pages3-4.md",
        },
        "frontmatterDoc": {
          "src": "../sub/pages3-4.md",
        },
        "frontmatterRaw": "src: ../sub/pages3-4.md
",
        "frontmatterStyle": "frontmatter",
        "index": 2,
        "level": undefined,
        "note": undefined,
        "raw": "---
src: ../sub/pages3-4.md
---
",
        "start": 8,
        "title": undefined,
      },
    ],
    "index": 6,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "# Page 3",
      "end": 2,
      "filepath": "sub/pages3-4.md",
      "frontmatter": {},
      "frontmatterDoc": null,
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 0,
      "level": 1,
      "note": undefined,
      "raw": "# Page 3
",
      "start": 0,
      "title": "Page 3",
    },
    "title": "Page 3",
  },
  {
    "content": "# Page 4

<Tweet />",
    "frontmatter": {
      "background": "https://sli.dev/demo-cover.png#14",
      "layout": "cover",
    },
    "importChain": [
      {
        "content": "",
        "end": 19,
        "filepath": "multi-entries.md",
        "frontmatter": {
          "background": "https://sli.dev/demo-cover.png#14",
          "src": "sub/nested1-4.md",
        },
        "frontmatterDoc": {
          "background": "https://sli.dev/demo-cover.png#14",
          "src": "sub/nested1-4.md",
        },
        "frontmatterRaw": "src: sub/nested1-4.md
background: https://sli.dev/demo-cover.png#14
",
        "frontmatterStyle": "frontmatter",
        "index": 3,
        "level": undefined,
        "note": undefined,
        "raw": "---
src: sub/nested1-4.md
background: https://sli.dev/demo-cover.png#14
---
",
        "start": 14,
        "title": undefined,
      },
      {
        "content": "",
        "end": 12,
        "filepath": "sub/nested1-4.md",
        "frontmatter": {
          "src": "../sub/pages3-4.md",
        },
        "frontmatterDoc": {
          "src": "../sub/pages3-4.md",
        },
        "frontmatterRaw": "src: ../sub/pages3-4.md
",
        "frontmatterStyle": "frontmatter",
        "index": 2,
        "level": undefined,
        "note": undefined,
        "raw": "---
src: ../sub/pages3-4.md
---
",
        "start": 8,
        "title": undefined,
      },
    ],
    "index": 7,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "# Page 4

<Tweet />",
      "end": 10,
      "filepath": "sub/pages3-4.md",
      "frontmatter": {
        "layout": "cover",
      },
      "frontmatterDoc": {
        "layout": "cover",
      },
      "frontmatterRaw": "layout: cover
",
      "frontmatterStyle": "frontmatter",
      "index": 1,
      "level": 1,
      "note": undefined,
      "raw": "---
layout: cover
---

# Page 4

<Tweet />
",
      "start": 2,
      "title": "Page 4",
    },
    "title": "Page 4",
  },
  {
    "content": "# Inline Page

$x+2$",
    "frontmatter": {},
    "importChain": undefined,
    "index": 8,
    "level": 1,
    "note": undefined,
    "source": {
      "content": "
# Inline Page

$x+2$
",
      "end": 25,
      "filepath": "multi-entries.md",
      "frontmatter": {},
      "frontmatterDoc": null,
      "frontmatterRaw": undefined,
      "frontmatterStyle": undefined,
      "index": 4,
      "level": 1,
      "note": undefined,
      "raw": "
# Inline Page

$x+2$
",
      "start": 20,
      "title": "Inline Page",
    },
    "title": "Inline Page",
  },
]
`;
